# advent_of_code_2022

./: Cargo.toml  readme.md
advent/: advents.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  tempCodeRunnerFile.rs  utils.rs
inputs/: day5.txt  day5_test.txt
src/: main.rs
