[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advents"
path = "advent/advents.rs"

[[bin]]
name = "advent_of_code_2022"
path = "src/main.rs"

[dependencies]
log = "0.4.20"
nom = "7.1.3"
